--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vue3-admin</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+
+      html, body {
+        height: 100%;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <noscript>
@@ -14,4 +25,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+  <script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/echarts-en.common.min.js"></script>
 </html>
