--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,14 @@
         width: 100%;
       }
 
+      html {
+        overflow: hidden;
+      }
+
+      body {
+        overflow: auto;
+      }
+
       #app {
       	height: 100%;
         width: 100%;
